[metadata]
name = CALF
version = 0.9.0
author = John Ford, Clark Jeffries, Diana Perkins
author_email = JoRuFo@gmail.com
description = Contains greedy algorithms for coarse approximation linear functions (CALF).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jorufo/CALF_Python
project_urls =
    Bug Tracker = https://github.com/jorufo/CALF_Python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src